# monorepo

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  requirements.in  requirements.txt
.github/workflows/: test.yaml  tests.yaml
api/: BUILD.bazel
api/app/: __init__.py
